# mobile-design-verify

./: .gitignore  NOTICE  README.md  SKILL.md  THIRD_PARTY_LICENSES.md
docs/: conventions.md  platforms.md  troubleshooting.md
docs/design-corpus/: README.md  _learnings.md
docs/design-corpus/2026-05-02-pet-care-home/: moodboard.md  notes.md
examples/todo-verify/flutter/: README.md  pubspec.yaml
examples/todo-verify/flutter/android/app/: build.gradle.kts
examples/todo-verify/flutter/android/app/src/main/: AndroidManifest.xml
examples/todo-verify/flutter/android/app/src/main/kotlin/com/example/todo_verify/: MainActivity.kt
examples/todo-verify/flutter/ios/Runner/: Info.plist
examples/todo-verify/flutter/ios/Runner.xcodeproj/: project.pbxproj
examples/todo-verify/flutter/lib/: main.dart
examples/todo-verify/flutter/test/: widget_test.dart
scripts/: _claude-windows-build.py  verify-flutter.sh
server/: config.py  mobile_design_mcp.py  pyproject.toml
server/flows/: assert_visible.yaml.tmpl  input_text.yaml.tmpl  kill_app.yaml.tmpl  launch_app.yaml.tmpl  press_key.yaml.tmpl  swipe.yaml.tmpl  tap.yaml.tmpl  wait_for.yaml.tmpl
server/tests/: test_hierarchy_prune.py  test_tools.py
